Fixed spacing

--- a/src/index.css
+++ b/src/index.css
@@ -14,8 +14,6 @@
   visibility: hidden; 
   pointer-events: none;
 }
-
-
 a, a:hover {
   color: white;
   text-decoration: none;
@@ -168,10 +166,14 @@ svg {
   border: 2px solid white;
 }
 
+#experienceLink {
+  height: 1000px;
+}
+
 
 @media screen and (max-width: 700px) {
   #experienceLink {
-    height: 1100px;
+    height: 1300px;
   }
 }
 @media screen and (max-width: 800px) {
@@ -183,6 +185,9 @@ svg {
 @media screen and (max-width: 1500px) {
   #timeline::after {
   left: 31px;
+  }
+  #aboutLink {
+    height: 50%;
   }
   
   .timeline-container {
